--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main"              : "lib/framework",
   "engines"           : { "node": ">= 0.6.0" },
   "dependencies"      : {
+    "jshint"            : ">= 0.5.6",
     "node-inspector"    : ">= 0.1.10",
     "vows"              : ">= 0.6.0",
     "bcrypt"            : ">= 0.4.0",
